Fixed reconnect problem Added workaround for MDEV-4604 in mysql_stmt_store_result